# opencv-swig

./: .gitattributes  AUTHORS  CMakeLists.txt  COPYING  LICENSE  OpenCV-SWIGConfig.cmake.in  README.md  ci-docker.nix  default.nix
.github/workflows/: ci.yaml
hello_world/: CMakeLists.txt  my_lib.hpp  my_lib.i  shell.nix
lib/: opencv.i
lib/opencv/: _common.i  _mat-2_4_11.i  _mat-2_4_13.i  _mat-3_0_0.i  _mat-3_1_0.i  _mat.i  _matx-2_4_13.i  _matx-3_0_0.i  _matx-3_1_0.i  _matx.i  _numpy.i  _point-2_4_12.i  _point-3_0_0.i  _point.i  _range-2_4_13.i  _range-3_0_0.i  _range.i  _rect-3_0_0.i  _rect.i  _scalar-3_0_0.i  _scalar.i  _size-3_0_0.i  _size.i  _vec-2_4_13.i  _vec-3_0_0.i  _vec-3_1_0.i  _vec.i  mat.i  matx.i  point.i  range.i  rect.i  scalar.i  size.i  vec.i
lib/opencv/detail/: common-2_4_11.i  common-3_2_0.i  common-3_3_1.i  common.i  mat-2_4_11.i  mat-3_0_0.i  mat-3_1_0.i  mat.i  matx-2_4_11.i  matx-3_0_0.i  matx-3_1_0.i  matx-3_2_0.i  matx.i  numpy.i  point-2_4_11.i  point-3_0_0.i  point.i  range-2_4_11.i  range-3_0_0.i  range.i  rect-2_4_11.i  rect-3_0_0.i  rect.i  scalar-2_4_11.i  scalar-3_0_0.i  scalar.i  size-2_4_11.i  size-3_0_0.i  size.i  vec-2_4_11.i  vec-3_0_0.i  vec-3_1_0.i  vec-3_2_0.i  vec.i
test/: CMakeLists.txt  FindOPENCV.cmake  mat.hpp  mat.i  matx.hpp  matx.i  point.hpp  point.i  range.hpp  range.i  rect.hpp  rect.i  run_mat.py  run_matx.py  run_point.py  run_range.py  run_rect.py  run_scalar.py  run_size.py  run_vec.py  scalar.hpp  scalar.i  size.hpp  size.i  test_matx.py  test_point.py  test_range.py  test_rect.py  test_scalar.py  test_size.py  test_vec.py  vec.hpp  vec.i
